@@ -102,6 +102,7 @@ import (
 	recipeteamnamespacefile "github.com/watermint/toolbox/recipe/team/namespace/file"
 	recipeteamnamespacemember "github.com/watermint/toolbox/recipe/team/namespace/member"
 	recipeteamreport "github.com/watermint/toolbox/recipe/team/report"
+	recipeteamrunasfilebatch "github.com/watermint/toolbox/recipe/team/runas/file/batch"
 	recipeteamrunasfilesyncbatch "github.com/watermint/toolbox/recipe/team/runas/file/sync/batch"
 	recipeteamrunassharedfolderbatch "github.com/watermint/toolbox/recipe/team/runas/sharedfolder/batch"
 	recipeteamrunassharedfoldermemberbatch "github.com/watermint/toolbox/recipe/team/runas/sharedfolder/member/batch"
@@ -350,6 +351,7 @@ func AutoDetectedRecipes() []infra_recipe_rc_recipe.Recipe {
 		&recipeteamreport.Devices{},
 		&recipeteamreport.Membership{},
 		&recipeteamreport.Storage{},
+		&recipeteamrunasfilebatch.Copy{},
 		&recipeteamrunasfilesyncbatch.Up{},
 		&recipeteamrunassharedfolderbatch.Share{},
 		&recipeteamrunassharedfolderbatch.Unshare{},
