@@ -2431,6 +2431,18 @@
   "recipe.team.report.storage.flag.start_date": "Start date",
   "recipe.team.report.storage.title": "Storage report",
   "recipe.team.report.title": "Team report commands",
+  "recipe.team.runas.file.batch.copy.cli.args": "-file /PATH/TO/DATA_FILE.csv",
+  "recipe.team.runas.file.batch.copy.flag.file": "Path to data file",
+  "recipe.team.runas.file.batch.copy.flag.peer": "Account alias",
+  "recipe.team.runas.file.batch.copy.title": "Batch copy files/folders as a member",
+  "recipe.team.runas.file.batch.copy_mapping.desc": "Copy mapping",
+  "recipe.team.runas.file.batch.copy_mapping.dst_path.desc": "Destination path",
+  "recipe.team.runas.file.batch.copy_mapping.dst_path.example": "/backup/report",
+  "recipe.team.runas.file.batch.copy_mapping.member_email.desc": "Team member email address",
+  "recipe.team.runas.file.batch.copy_mapping.member_email.example": "emma@example.com",
+  "recipe.team.runas.file.batch.copy_mapping.src_path.desc": "Source path",
+  "recipe.team.runas.file.batch.copy_mapping.src_path.example": "/report",
+  "recipe.team.runas.file.batch.title": "Batch file operation that run as a member",
   "recipe.team.runas.file.sync.batch.title": "Batch sync commands that run as members",
   "recipe.team.runas.file.sync.batch.up.cli.args": "-file /PATH/TO/DATA_FILE.csv",
   "recipe.team.runas.file.sync.batch.up.flag.batch_size": "Batch commit size",
